--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-config": "^1.4.1",
     "react-native-fast-image": "^8.3.4",
     "react-native-gesture-handler": "^1.9.0",
+    "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.13.2",
     "react-native-safe-area-context": "^3.1.9",
     "react-native-screens": "^2.15.0",
