--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "android": "npx react-native run-android",
-    "ios": "react-native run-ios",
+    "ios": "npx react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
@@ -17,7 +17,7 @@
     "@react-navigation/stack": "^5.12.8",
     "axios": "^0.21.0",
     "moment": "^2.29.1",
-    "react": "16.13.1",
+    "react": "16",
     "react-native": "0.63.4",
     "react-native-config": "^1.4.1",
     "react-native-fast-image": "^8.3.4",
@@ -34,13 +34,30 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^25.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "eslint": "^6.5.1",
     "eslint-plugin-react": "^7.21.5",
     "jest": "^25.1.0",
+    "jest-enzyme": "^7.1.2",
+    "jest-localstorage-mock": "^2.4.3",
     "metro-react-native-babel-preset": "^0.59.0",
+    "react-dom": "16",
     "react-test-renderer": "16.13.1"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "setupFilesAfterEnv": [
+      "<rootDir>setup-tests.js"
+    ],
+    "setupFiles": [
+      "jest-localstorage-mock",
+       "./node_modules/react-native-gesture-handler/jestSetup.js"
+    ],
+    "transformIgnorePatterns": [
+     "/node_modules/(?!native-base)/"
+]
+
+
   }
 }
